Updated versions, Panama test rewritten with Jep-424